@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Dec 2014; Johann Schmitz <ercpe@gentoo.org>
+  -django-rest-framework-2.3.10.ebuild, -django-rest-framework-2.4.3.ebuild:
+  Dropped old versions
+
 *django-rest-framework-2.4.4 (29 Nov 2014)
 
   29 Nov 2014; Johann Schmitz <ercpe@gentoo.org>
